# openipc-rs

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md  cliff.toml  release.toml
.cargo/: config.toml
.github/: dependabot.yml
apps/nebulus/: Cargo.toml  README.md  build.rs  index.html
apps/nebulus/android/java/dev/neels/openipc/nebulus/: NebulusActivity.java  NebulusVpnService.java
apps/nebulus/assets/: README.md  generate-video-fixtures.sh  mock-1080p.h265  mock-720p.h264  mock-720p.h265  mock.h264  mock.h265
apps/nebulus/packaging/windows/: Nebulus.iss
apps/nebulus/presets/: openipc-standard.nebulus-preset.json  registry-schema-v1.json  registry.json  schema-v1.json
apps/nebulus/src/: android.rs  app.rs  build_info.rs  desktop_tray.rs  lib.rs  logging.rs  low_latency.rs  main.rs  model.rs  preflight.rs  presets.rs  recording.rs  recording_destination.rs  remote_presets.rs  settings.rs  support_bundle.rs  tun_bridge.rs  wintun.rs
apps/nebulus/src/audio/: mod.rs  native.rs  web.rs
apps/nebulus/src/runtime/: codec_mock.rs  messages.rs  mock_fixture.rs  mod.rs  native.rs  route_runtime.rs  udp_input.rs  uplink_control.rs  web.rs  web_decode.rs
apps/nebulus/src/runtime/native/worker/: udp.rs
apps/nebulus/src/telemetry/: crsf.rs  mavlink.rs  mod.rs  msp.rs
apps/nebulus/src/ui/: diagnostics.rs  gui.rs  logs.rs  metrics.rs  mod.rs  osd.rs  presets.rs  routes.rs  scanner.rs  settings.rs  telemetry.rs  theme.rs  video.rs
apps/nebulus/src/video/: android_glow.rs  android_gpu.rs  mod.rs  native_gpu.rs  platform.rs  web_glow.rs
apps/nebulus/tests/: adaptive_uplink.rs
apps/openipc-cli/: Cargo.toml  README.md
apps/openipc-cli/src/: main.rs
apps/openipc-station/src-tauri/: Cargo.toml  tauri.conf.json
apps/openipc-station/src-tauri/capabilities/: default.json
apps/openipc-station/src-tauri/icons/: icon.icns
apps/openipc-station/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  payloads.rs  platform.rs  tun_bridge.rs  types.rs  worker.rs
apps/wfb-rs/: Cargo.toml  README.md
apps/wfb-rs/src/: common.rs  tx_cmd_proto.rs
crates/openipc-core/: Cargo.toml  README.md
crates/openipc-core/benches/: dataplane.rs
crates/openipc-core/benches/reference/: zfex_bench.c
crates/openipc-core/src/: adaptive.rs  channel.rs  crypto.rs  diversity.rs  fec.rs  fec_simd.rs  ieee80211.rs  lib.rs  mock.rs  pipeline.rs  radiotap.rs  realtek.rs  realtek_tx.rs  receiver.rs  routes.rs  rtp.rs  tsf.rs  wfb.rs  wfb_tx.rs  wifi.rs
crates/openipc-core/tests/: pixelpilot_reference.rs
crates/openipc-native/: Cargo.toml  README.md
crates/openipc-native/src/: lib.rs  main.rs
crates/openipc-rtl88xx/: Cargo.toml  README.md
crates/openipc-rtl88xx/src/: adapter_caps.rs  adapter_health.rs  ampdu.rs  async_continuous_tx.rs  async_cw.rs  async_diagnostics.rs  async_driver.rs  async_efuse.rs  async_firmware.rs  async_firmware_8814.rs  async_iqk.rs  async_iqk_8812.rs  async_jaguar2.rs  async_jaguar2_8821c_iqk.rs  async_jaguar2_iqk.rs  async_jaguar2_kfree.rs  async_jaguar2_power_tracking.rs  async_jaguar2_spur.rs  async_jaguar3.rs  async_jaguar3_8822e.rs  async_jaguar3_iqk.rs  async_mac.rs  async_phydm.rs  async_power_tracking.rs  async_radio.rs  async_sensing.rs  async_tables.rs  async_tx_features.rs  async_tx_power.rs  beamforming.rs  cfo.rs  device.rs  diagnostics.rs  firmware.rs  hop_prof.rs  lib.rs  link_health.rs  phy.rs  power.rs  regs.rs  (+13 more)
crates/openipc-rtl88xx/src/data/: rtl8812_tx_power_tables.rs  rtl8821c_reference_data.rs  rtl8822b_reference_data.rs  rtl8822c_reference_data.rs  rtl8822e_reference_data.rs  rtl_reference_data.rs
crates/openipc-uplink/: Cargo.toml  README.md
crates/openipc-uplink/src/: config.rs  control.rs  engine.rs  framing.rs  legacy_control.rs  lib.rs  network.rs  ssh.rs  stream.rs
crates/openipc-video/: Cargo.toml  README.md
crates/openipc-video/examples/: decode_access_unit.rs  inspect_annex_b.rs
crates/openipc-video/src/: lib.rs
crates/openipc-video/src/api/: capabilities.rs  config.rs  decoder.rs  error.rs  frame.rs  mod.rs  stats.rs  surface.rs
crates/openipc-video/src/backends/: mod.rs  test_fixtures.rs
crates/openipc-video/src/backends/android/: decoder.rs  mod.rs  session.rs  surface.rs  surface_decoder.rs  surface_session.rs  tests.rs
crates/openipc-video/src/backends/linux/: decoder.rs  device.rs  frame.rs  mod.rs  session.rs  surface.rs  tests.rs
crates/openipc-video/src/backends/macos/: callback.rs  decoder.rs  ffi.rs  mod.rs  session.rs  surface.rs  tests.rs  texture.rs
crates/openipc-video/src/backends/macos/codecs/: h264.rs  h265.rs  mod.rs
crates/openipc-video/src/backends/web/: decoder.rs  mod.rs  surface.rs
crates/openipc-video/src/backends/windows/: d3d.rs  decoder.rs  mft.rs  mod.rs  runtime.rs  surface.rs  tests.rs
crates/openipc-video/src/codecs/: access_unit.rs  annex_b.rs  mod.rs
crates/openipc-video/src/codecs/h264/: config.rs  inspect.rs  mod.rs
crates/openipc-video/src/codecs/h265/: config.rs  inspect.rs  mod.rs
crates/openipc-video/src/runtime/: clock.rs  mailbox.rs  mod.rs  queue.rs  stats.rs
crates/openipc-web/: Cargo.toml  README.md  build.mjs  package.json
crates/openipc-web/src/: adaptive.rs  js.rs  lib.rs  mock.rs  receiver.rs  session.rs  video.rs  webusb.rs
docs/: .gitignore  (+7 more)
plugins/tauri-plugin-openipc-usb/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-openipc-usb/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
plugins/tauri-plugin-openipc-usb/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-openipc-usb/android/src/main/res/xml/: openipc_usb_device_filter.xml
plugins/tauri-plugin-openipc-usb/permissions/: default.toml
plugins/tauri-plugin-openipc-usb/permissions/autogenerated/: reference.md
plugins/tauri-plugin-openipc-usb/permissions/autogenerated/commands/: close_device.toml  close_vpn.toml  open_device.toml  open_vpn.toml
plugins/tauri-plugin-openipc-usb/permissions/schemas/: schema.json
plugins/tauri-plugin-openipc-usb/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+97 files in other folders)
