[workspace]
resolver = "2"
members = [
    "apps/nebulus",
    "apps/openipc-cli",
    "apps/wfb-rs",
    "crates/openipc-core",
    "crates/openipc-rtl88xx",
    "crates/openipc-video",
    "crates/openipc-web",
    "apps/openipc-station/src-tauri",
    "plugins/tauri-plugin-openipc-usb",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/neelsani/openipc-rs"

[workspace.dependencies]
log = "0.4"
nusb = { package = "nusb-webusb", version = "0.2.3" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

# Codec mocks are debug-only, but a 1080p decoder/readback/texture pipeline is
# not a meaningful real-time test when any of its crates run at opt-level 0.
[profile.dev]
opt-level = 2
