[package]
name = "nebulus"
version = "0.1.28"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-latency native OpenIPC FPV ground station built with egui"
publish = true
readme = "README.md"

[lib]
name = "nebulus_app"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nebulus"
path = "src/main.rs"

[dependencies]
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "persistence"] }
egui_plot = "0.36"
nusb.workspace = true
openipc-core = { version = "0.1.28", path = "../../crates/openipc-core" }
openipc-rtl88xx = { version = "0.1.28", path = "../../crates/openipc-rtl88xx" }
openipc-video = { version = "0.1.28", path = "../../crates/openipc-video" }
muxide = "0.2.5"
log.workspace = true
ropus = "0.12.18"
serde = { version = "1", features = ["derive"] }
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.18.1", features = ["realtime"] }
tun = { version = "0.8", features = ["async", "verify_binary_signature"] }

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = "0.2"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["wgpu", "wayland", "x11"] }

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["wgpu"] }

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["wgpu"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls-no-alpn"] }
sha2 = "0.10.9"
tokio = { version = "1", features = ["rt", "time"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.24.1"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
eframe = { version = "0.35", default-features = false, features = ["glow"] }
egui_glow = "0.35"
jni = "0.22.4"
libc = "0.2"
log = "0.4"
ndk = { version = "0.9", default-features = false, features = ["nativewindow", "api-level-26"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
console_error_panic_hook = "0.1"
eframe = { version = "0.35", default-features = false, features = ["glow"] }
egui_glow = "0.35"
futures-util = "0.3"
futures-channel = "0.3"
js-sys = "0.3"
rfd = { version = "0.17.2", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "BaseAudioContext",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "GainNode",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "Navigator",
    "Usb",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "Url",
    "VideoFrame",
    "Window",
    "console",
] }

[package.metadata.android]
package = "dev.neels.openipc.nebulus"
apk_name = "Nebulus"
java_sources = "android/java"
build_targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "x86_64-linux-android",
    "i686-linux-android",
]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
label = "Nebulus"

[[package.metadata.android.application.activity]]
name = "dev.neels.openipc.nebulus.NebulusActivity"
exported = true

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "nebulus_app"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.application.service]]
name = "dev.neels.openipc.nebulus.NebulusVpnService"
enabled = true
exported = false
permission = "android.permission.BIND_VPN_SERVICE"

[[package.metadata.android.application.service.intent_filter]]
actions = ["android.net.VpnService"]

[[package.metadata.android.uses_feature]]
name = "android.hardware.usb.host"
required = true
