[package]
name = "openipc-cli"
version = "0.1.37"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line utilities for openipc-rs"
publish = false
readme = "README.md"

[dependencies]
openipc-core = { version = "0.1.37", path = "../../crates/openipc-core" }
openipc-rtl88xx = { version = "0.1.37", path = "../../crates/openipc-rtl88xx" }
openipc-uplink = { version = "0.1.37", path = "../../crates/openipc-uplink" }
nusb.workspace = true

[[bin]]
name = "openipc-rs"
path = "src/main.rs"
