[package]
name = "openipc-core"
version = "0.1.33"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared OpenIPC FPV packet, RTP, and Realtek RX parsing logic"
readme = "README.md"

[lib]
name = "openipc_core"
path = "src/lib.rs"

[[bench]]
name = "dataplane"
harness = false

[dependencies]
log.workspace = true
chacha20 = { version = "0.10", features = ["cipher", "legacy"] }
crypto_box = "0.9"
poly1305 = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
