[package]
name = "openipc-native"
version = "0.1.18"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native desktop adapter for openipc-rs"
readme = "README.md"

[dependencies]
openipc-core = { version = "0.1.18", path = "../openipc-core" }
openipc-rtl88xx = { version = "0.1.18", path = "../openipc-rtl88xx" }
nusb.workspace = true

[lib]
name = "openipc_native"
path = "src/lib.rs"

[[bin]]
name = "openipc-rs"
path = "src/main.rs"
