[package]
name = "openipc-rtl88xx"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust Realtek rtl88xx USB WiFi receiver driver for OpenIPC"

[dependencies]
openipc-core = { version = "0.1.5", path = "../openipc-core" }
nusb.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["UsbDevice", "Window"] }

[lib]
name = "openipc_rtl88xx"
path = "src/lib.rs"
