[package]
name = "openipc-rtl88xx"
version = "0.1.31"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust Realtek rtl88xx USB WiFi receiver driver for OpenIPC"
readme = "README.md"

[dependencies]
log.workspace = true
openipc-core = { version = "0.1.31", path = "../openipc-core" }
nusb.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Performance", "UsbDevice", "Window"] }

[lib]
name = "openipc_rtl88xx"
path = "src/lib.rs"
