[package]
name = "openipc-web"
version = "0.1.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for openipc-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]
name = "openipc_web"
path = "src/lib.rs"

[dependencies]
js-sys = "0.3"
nusb.workspace = true
openipc-core = { version = "0.1.15", path = "../openipc-core" }
openipc-rtl88xx = { version = "0.1.15", path = "../openipc-rtl88xx" }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Performance", "UsbDevice", "Window"] }
