[package]
name = "tauri-plugin-openipc-usb"
version = "0.1.28"
description = "Tauri Android USB permission bridge for OpenIPC Station"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
readme = "README.md"
links = "tauri-plugin-openipc-usb"

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "2"

[build-dependencies]
openipc-rtl88xx = { path = "../../crates/openipc-rtl88xx" }
tauri-plugin = { version = "2", features = ["build"] }
