[package]
name = "openipc-rs-desktop"
version = "0.1.29"
description = "Native desktop shell for openipc-rs"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "openipc_rs_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
nusb = { workspace = true }
openipc-core = { path = "../../../crates/openipc-core" }
openipc-rtl88xx = { path = "../../../crates/openipc-rtl88xx" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-openipc-usb = { path = "../../../plugins/tauri-plugin-openipc-usb" }
tun = { version = "0.8", features = ["async"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { version = "1", features = ["rt", "time"] }
